<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFF3E5BE"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:padding="16dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textgolden"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:background="#BC7A40"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textgolden"
        android:textSize="24sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/textgolden"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/your_selected_date"
        android:textColor="#A1936F03"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/textgolden"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/current_date"
        android:textColor="#A1936F03"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/_0"
        android:textColor="@color/textgolden"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/in_minutes_till_date"
        android:textColor="#A1936F03"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>